--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ html, body{
   position: absolute;
   left: 10px;
   right: 20px;
-  bottom: 200px;
+  bottom: 20%;
   /* display: none; */
 }
 
@@ -238,7 +238,6 @@ html, body{
  bottom: 0px;
  right: 0px;
  background-color: #222b32;
- /* height: 100%; */
  overflow: hidden;
  overflow-y: auto;
 }
